--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -5,7 +5,7 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	letter-spacing: 0.5px;
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	&:before,
 	&:after {
 		-webkit-box-sizing: border-box;
