--- a/src/components/todoList/todoList.css
+++ b/src/components/todoList/todoList.css
@@ -1,10 +1,6 @@
 .todoList {
 	margin-top: 20px;
 }
-
-.todoList li {
-	list-style: none;
-}
 button {
 	padding: 3px 5px;
 }
@@ -16,4 +12,10 @@ button {
 }
 .error-message {
 	color: red;
+}
+.active-filter {
+	background-color: aquamarine;
+}
+.is-done {
+	opacity: 0.5;
 }
